Set Background and fix some layout problem
In previous build, the subtitle in right side
can't align to navbar, now fix it.

--- a/css/videoPageStyle.css
+++ b/css/videoPageStyle.css
@@ -1,9 +1,19 @@
+body {
+	background-color:#3c3c3c;
+}
+td {
+	vertical-align: top;
+	padding: 5px;
+}
 #video_caption {
 	height: 20px;
 	text-align: center;
+	background-color: white;
+	margin-bottom: 10px;
 }
 #caption_block {
 	height: 350px;
 	overflow-x: hidden;
 	overflow-y: scroll;
+	background-color: white;
 }
